# LLM_Nature_Identity

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
analysis/: barrier_profile.py  energy_from_lock_rate.py  energy_landscape.py  energy_landscape_v2.py  identity_invariance.py
llm_identity/: __init__.py  cli.py  competition.py  generate.py  metrics.py  model.py  phase_transition.py  phase_transition_2d.py  real_gpt2.py  sculpt.py  util.py  vocab.py  witness.py
scripts/: run_ladder_gpt2.py  run_phase.py  run_phase2d.py  run_phase2d_gpt2.py  run_phase3d.py  run_phase3d_gpt2.py  run_proofpack.py
tests/: conftest.py  test_basin_depth_delta.py  test_determinism.py  test_gpt2_ladder_invariants.py  test_gpt2_phase2d_boundary_curve.py  test_gpt2_phase2d_monotone_high_constraint.py  test_gpt2_phase2d_phase_sharpness.py  test_gpt2_phase2d_smoke.py  test_gpt2_phase3d_smoke.py  test_identity_attractor.py  test_identity_competition.py  test_identity_invariance_pass.py  test_phase_transition_2d_smoke.py  test_phase_transition_smoke.py  test_witness_digest.py
