[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[project]
name = "llm-nature-identity"
version = "0.1.0"
description = "Identity as an attractor in constrained stochastic token dynamics"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "LLM Nature"}]

[project.scripts]
identity-demo = "llm_identity.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
